--- a/SAC2014/src/main/res/values/strings.xml
+++ b/SAC2014/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">SAC 2014</string>
+    <string name="app_name">RU SAC 2014</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="drawer_open">Open Drawer</string>
