--- a/RowanSAC/src/main/res/values/strings.xml
+++ b/RowanSAC/src/main/res/values/strings.xml
@@ -5,6 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="drawer_open">Open Drawer</string>
-    <string name="drawer_close">Cloes Drawer</string>
+    <string name="drawer_close">Close Drawer</string>
 
 </resources>
