--- a/SAC_2014_App/src/main/res/values/strings.xml
+++ b/SAC_2014_App/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_camera_pro">Camera</string>
 
 </resources>
