--- a/RowanSAC/src/main/res/values/strings.xml
+++ b/RowanSAC/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="drawer_open">Open Drawer</string>
     <string name="drawer_close">Close Drawer</string>
     <string name="photovoid">This photo can\'t be uploaded.</string>
+    <string name="v">b2</string>
 
 </resources>
